Linkerd/Examples/EmojiVoto/emojivoto-v12.yaml
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc-v12
  namespace: emojivoto
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  - name: prom
    port: 8801
    targetPort: 8801
  selector:
    app: emoji-svc-v12
---
apiVersion: v1
kind: Service
metadata:
  name: voting-svc-v12
  namespace: emojivoto
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  - name: prom
    port: 8801
    targetPort: 8801
  selector:
    app: voting-svc-v12
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-v12
  namespace: emojivoto
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: web-svc-v12
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: emoji-v12
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v12
  name: emoji-v12
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-svc-v12
      version: v12
  template:
    metadata:
      labels:
        app: emoji-svc-v12
        version: v12
    spec:
      containers:
      - env:
        - name: GRPC_PORT
          value: "8080"
        - name: PROM_PORT
          value: "8801"
        image: docker.l5d.io/buoyantio/emojivoto-emoji-svc:v12
        name: emoji-svc-v12
        ports:
        - containerPort: 8080
          name: grpc
        - containerPort: 8801
          name: prom
        resources:
          requests:
            cpu: 100m
      serviceAccountName: emoji
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vote-bot-v12
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v12
  name: vote-bot-v12
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-bot-v12
      version: v12
  template:
    metadata:
      labels:
        app: vote-bot-v12
        version: v12
    spec:
      containers:
      - command:
        - emojivoto-vote-bot
        image: docker.l5d.io/buoyantio/emojivoto-web:v12
        name: vote-bot
        resources:
          requests:
            cpu: 10m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: voting-v12
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v12
  name: voting-v12
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-svc-v12
      version: v12
  template:
    metadata:
      labels:
        app: voting-svc-v12
        version: v12
    spec:
      containers:
      - env:
        - name: GRPC_PORT
          value: "8080"
        - name: PROM_PORT
          value: "8801"
        image: docker.l5d.io/buoyantio/emojivoto-voting-svc:v12
        name: voting-svc-v12
        ports:
        - containerPort: 8080
          name: grpc
        - containerPort: 8801
          name: prom
        resources:
          requests:
            cpu: 100m
      serviceAccountName: voting
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web-v12
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v12
  name: web-v12
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc-v12
      version: v12
  template:
    metadata:
      labels:
        app: web-svc-v12
        version: v12
    spec:
      containers:
      - env:
        - name: WEB_PORT
          value: "8080"
        - name: EMOJISVC_HOST
          value: emoji-svc.emojivoto:8080
        - name: VOTINGSVC_HOST
          value: voting-svc.emojivoto:8080
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        image: docker.l5d.io/buoyantio/emojivoto-web:v12
        name: web-svc-v12
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 100m
      serviceAccountName: web
