Linkerd/Examples/EmojiVoto/emojivoto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto-ingress
  namespace: emojivoto
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/enable-cors: "true"    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
#IMPORTANT: Ensures that Linkerd and Nginx Ingress can work properly
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
  - host: <dns-name>
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 8080
